--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "numeral": "^2.0.6",
+    "spectre.css": "^0.5.9",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
