--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "vue": "^2.6.11",
     "vue-plyr": "^6.0.4",
     "vue-router": "^3.2.0",
-    "vue-unicons": "^2.3.0"
+    "vue-unicons": "^2.3.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
