--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue": "^2.6.11",
     "vue-plyr": "^6.0.4",
     "vue-router": "^3.2.0",
-    "vue-unicons": "^2.3.0",
+    "vue-unicons": "^2.1.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -24,7 +24,7 @@
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.4.0",
+    "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
