--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@skjnldsv/vue-plyr": "^7.0.1-beta.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "numeral": "^2.0.6",
     "spectre.css": "^0.5.9",
     "string-strip-html": "^4.5.0",
     "vue": "^2.6.11",
-    "vue-plyr": "^6.0.4",
     "vue-router": "^3.2.0",
     "vue-unicons": "^2.1.0",
     "vuex": "^3.6.2"
