--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@skjnldsv/vue-plyr": "^7.0.1-beta.0",
     "axios": "^0.21.2",
